@@ -194,5 +194,6 @@
 	<classpathentry kind="lib" path="reporting/jsp/lib/servlet-api-2.5.jar"/>
 	<classpathentry kind="lib" path="reporting/jsp/lib/jsp-api-2.1.jar"/>
 	<classpathentry kind="lib" path="reporting/jsp/lib/el-api.jar"/>
+	<classpathentry kind="lib" path="main/lib/twitter4j-1.1.4.jar"/>
 	<classpathentry kind="output" path="target/classes.from.eclipse"/>
 </classpath>
